--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  --main-gray:#707173;
+  --dark-grey: #1C2126;
+  --light: #DBDBDB;
+  --main-font: 'Montserrat Alternates', sans-serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: var(--main-gray);
+  font-family: var(--main-font); 
+}
