--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+:root {
   --main-gray:#707173;
   --dark-grey: #1C2126;
   --light: #DBDBDB;
@@ -9,6 +9,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: var(--main-gray);
   font-family: var(--main-font); 
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: var(--main-gray);
 }
